objects/copado__Connection_Behavior__c.object
<CustomObject>
    <description>Defines the deployment, back-promotion, and quality gate behavior for connections or sets the default for connections into a particular environment.</description>
    <fields>
        <fullName>copado__Back_Promotion_Behavior__c</fullName>
        <description>How should user stories be moved back from higher environments (prod/test) to lower environments (test/dev)</description>
        <inlineHelpText>How should user stories be moved back from higher environments (prod/test) to lower environments (test/dev)</inlineHelpText>
        <label>Back-Promotion Behavior</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automated</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                    <default>true</default>
                    <label>Manual</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Back_Promotion_Schedule__c</fullName>
        <description>The schedule for back promotions (if they are scheduled)</description>
        <inlineHelpText>The schedule for back promotions (if they are scheduled)</inlineHelpText>
        <label>Back-Promotion Schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Back_Promotion_Scheduled_Job_ID__c</fullName>
        <description>The Salesforce Scheduled Job ID associated with scheduled back-promotion jobs</description>
        <inlineHelpText>The Salesforce Scheduled Job ID associated with scheduled back-promotion jobs</inlineHelpText>
        <label>Back-Promotion Scheduled Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Description__c</fullName>
        <description>A summary of this connection behavior</description>
        <inlineHelpText>A summary of this connection behavior</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__Max_Scheduled_Back_Promotion_Batch_Size__c</fullName>
        <defaultValue>10</defaultValue>
        <description>The maximum number of user stories that will be deployed together when a deployment is scheduled</description>
        <inlineHelpText>Set to 1 to deploy each story individually. Batching deployments speeds up the process but causes all stories in a batch to succeed or fail together. This can delay the deployment of some stories and make it harder to identify the cause of errors.</inlineHelpText>
        <label>Scheduled Back-Promotions Max Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Max_Scheduled_Promotion_Batch_Size__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The maximum number of user stories that will be deployed together when a deployment is scheduled</description>
        <inlineHelpText>Set to 1 to deploy each story individually. Batching deployments speeds up the process but causes all stories in a batch to succeed or fail together. This can delay the deployment of some stories and make it harder to identify the cause of errors.</inlineHelpText>
        <label>Scheduled Deployment Max Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Promotion_Behavior__c</fullName>
        <description>How should user stories be deployed from lower (dev/test) environments to higher environments (test/prod)</description>
        <inlineHelpText>How should user stories be deployed from lower (dev/test) environments to higher environments (test/prod)</inlineHelpText>
        <label>Deployment Behavior</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>copado__Connection_Behavior_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Promotion_Schedule__c</fullName>
        <description>The schedule for deployments (if they are scheduled)</description>
        <inlineHelpText>The schedule for deployments (if they are scheduled)</inlineHelpText>
        <label>Deployment Schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Promotion_Scheduled_Job_ID__c</fullName>
        <description>The Salesforce Scheduled Job ID associated with scheduled deployment jobs</description>
        <inlineHelpText>The Salesforce Scheduled Job ID associated with scheduled deployment jobs</inlineHelpText>
        <label>Deployment Scheduled Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Schedule_Back_Promotion__c</fullName>
        <description>An action link to schedule back-promotions</description>
        <formula>IF($Setup.copado__Settings__c.copado__Namespace__c != &apos;none&apos;,
IF(
TEXT(copado__Back_Promotion_Behavior__c) == &apos;Scheduled&apos;, 
HYPERLINK(&quot;/apex/copado__ScheduleConnectionBehavior?id=&quot; + Id + &quot;&amp;promotionType=Back_Promotion&quot;, &quot;Schedule Back-Promotion&quot;,&apos;_self&apos;),
&apos;&apos;),
IF(
TEXT(copado__Back_Promotion_Behavior__c) == &apos;Scheduled&apos;, 
HYPERLINK(&quot;/apex/ScheduleConnectionBehavior?id=&quot; + Id + &quot;&amp;promotionType=Back_Promotion&quot;, &quot;Schedule Back-Promotion&quot;,&apos;_self&apos;),
&apos;&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>An action link to schedule back-promotions</inlineHelpText>
        <label>Schedule Back-Promotions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Schedule_Promotion__c</fullName>
        <description>An action link to schedule deployments</description>
        <formula>IF($Setup.copado__Settings__c.copado__Namespace__c != &apos;none&apos;,
IF(
TEXT(copado__Promotion_Behavior__c) == &apos;Scheduled&apos;, HYPERLINK(&quot;/apex/copado__ScheduleConnectionBehavior?id=&quot; + Id + &quot;&amp;promotionType=Promotion&quot;, &quot;Schedule Deployments&quot;,&apos;_self&apos;),
&apos;&apos;),
IF(
TEXT(copado__Promotion_Behavior__c) == &apos;Scheduled&apos;, HYPERLINK(&quot;/apex/ScheduleConnectionBehavior?id=&quot; + Id + &quot;&amp;promotionType=Promotion&quot;, &quot;Schedule Deployments&quot;,&apos;_self&apos;),
&apos;&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>An action link to schedule deployments</inlineHelpText>
        <label>Schedule Deployments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Story_Status_After_Deployment__c</fullName>
        <description>Automatically change the status of user stories after deploying them to the target environment</description>
        <inlineHelpText>What status should user stories be set to after they are successfully deployed?</inlineHelpText>
        <label>Story Status After Deployment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>copado__Story_Status_After_Deployment</valueSetName>
        </valueSet>
    </fields>
    <label>Connection Behavior</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Promotion_Behavior__c</columns>
        <columns>copado__Back_Promotion_Behavior__c</columns>
        <columns>copado__Story_Status_After_Deployment__c</columns>
        <columns>copado__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Connection Behavior Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connection Behaviors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>copado__Batch_Size_Valid_Interval</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
    OR(
        OR( 
           copado__Max_Scheduled_Promotion_Batch_Size__c &lt;= 0, 
           copado__Max_Scheduled_Promotion_Batch_Size__c &gt; 2000
        ),
        OR(
           copado__Max_Scheduled_Back_Promotion_Batch_Size__c  &lt;= 0, 
           copado__Max_Scheduled_Back_Promotion_Batch_Size__c  &gt; 2000
        )
    )
,true,
false
)</errorConditionFormula>
        <errorMessage>Batch Size fields for Promotion or Back Promotion needs to be between 1 and 2000</errorMessage>
    </validationRules>
</CustomObject>